--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,9 @@
         </form>
       </header>
       <ul class="gallery"></ul>
+      <div class="loader-container">
+        <span class="loader"></span>
+      </div>
     </div>
     <script type="module" src="./main.js"></script>
   </body>
